# kern

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/skills/kern-release/: SKILL.md
.github/workflows/: ci.yml
docs/plans/: 2026-05-16-phase5-persistence.md
docs/specs/: 2026-05-16-duration-selector-design.md  2026-05-16-phase3-timer-results-design.md  2026-05-16-phase5-persistence-design.md
src/: app.rs  commands.rs  config.rs  generator.rs  input.rs  integration_tests.rs  main.rs  metrics.rs  model.rs  msg.rs  persistence.rs  update.rs  view.rs
src/snapshots/: kern__view__tests__duration_15s.snap  kern__view__tests__duration_60s.snap  kern__view__tests__results_screen_snapshot.snap  ktype__view__tests__caret_underline.snap  ktype__view__tests__duration_15s.snap  ktype__view__tests__duration_30s.snap  ktype__view__tests__duration_60s.snap  ktype__view__tests__idle_screen_update_banner_snapshot.snap  ktype__view__tests__modal_time.snap  ktype__view__tests__modal_words.snap  ktype__view__tests__numbers_on_header.snap  ktype__view__tests__punctuation_on_header.snap  ktype__view__tests__results_punctuation_numbers_label.snap  ktype__view__tests__results_screen_snapshot.snap  ktype__view__tests__results_screen_with_chart_snapshot.snap  ktype__view__tests__running_elapsed_5s.snap  ktype__view__tests__running_elapsed_zero.snap  ktype__view__tests__typing_screen_snapshot.snap  ktype__view__tests__typing_screen_waiting_snapshot.snap  ktype__view__tests__words_mode_running.snap  ktype__view__tests__words_mode_waiting.snap
tests/: cli_flags.rs
(+1 files in other folders)
