[package]
name = "kern"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kern"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
anyhow = "1"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
proptest = "1.11"
insta = { version = "1.47", features = ["yaml"] }
tempfile = "3"
